testsuite/tests/interpreter_errors/add_to_bool_error/test.out
main.adb

Error: Expected Int but got Bool

print (true + 2)
       ^^^^^^^^^

